--- a/index.html
+++ b/index.html
@@ -284,13 +284,12 @@ color: red;
       </div>
     </div> -->
 
-    <div class="rules pt-2 mt-4" style="display: flex; justify-content: start;">
+    <!-- <div class="rules pt-2 mt-4" style="display: flex; justify-content: start;">
       <a class="btn-rules" style="margin: 0 auto;">
         Rules
       </a>
-      
     </div>
-    <span style="color: white; display: block; margin-top: 3rem;">This project is developed with love by <a href="#" style="color: rgb(228, 224, 22);">Isaac Urdaneta</a></span>
+    <span style="color: white; display: block; margin-top: 3rem;">This project is developed with love by <a href="#" style="color: rgb(228, 224, 22);">Isaac Urdaneta</a></span> -->
   </main>
   
   <script src="./index.js" type="module"></script>
