--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/rock-paper-scissors.png">
   <link rel="stylesheet" href="./styles/index.css">
   
   <title>Frontend Mentor | Rock, Paper, Scissors | developed by Isaac Urdaneta</title>
